--- a/siw-ricettario-VDL-FF/src/main/resources/templates/index.html
+++ b/siw-ricettario-VDL-FF/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/stile.css?version=2" />
 	</head>
 	<body>
-		<div><img src="/siw-logo.png" width="50%"/></div>
+		<div><img src="/siw-logo.jpg" width="50%"/></div>
 		<h1>Operazioni(TEST)</h1>
 	</body>
 </html>
